[nim, dj] Correcting multichoice choropleth to load map data using south sudan poll categories geoserver layer instead of the poll data layer

--- a/ureport/templates/ureport/partials/viz/multichoice_choropleth.html
+++ b/ureport/templates/ureport/partials/viz/multichoice_choropleth.html
@@ -79,7 +79,7 @@
     function createPollDataLayer() {
         var params = {
             viewparams: 'poll:{{poll.pk}};app:{{deployment_id}}',
-            layers: 'unicef:polls_south_sudan',
+            layers: 'unicef:pollcategories_southsudan',
             styles: '',
             format: format,
             transparent: true
