--- a/ureport/templates/ureport/partials/viz/choropleth.html
+++ b/ureport/templates/ureport/partials/viz/choropleth.html
@@ -185,8 +185,13 @@
         map.addLayers([createGoogleBaseLayer(),createPollDataLayer()]);
 
         addControlsToMap();
-
-        var bounds = lonLatBounds(lonLatPoint(22.9224, 3.0545), lonLatPoint(36.3033, 12.6503));
+        var passedBounds = '{{ map_bounds }}';
+        var cleanedBounds = passedBounds.replace(/&#39;/g, "\"");
+        var mapBounds = JSON.parse(cleanedBounds);
+        var bounds = lonLatBounds(
+                lonLatPoint(mapBounds.bottom_left.lon, mapBounds.bottom_left.lat),
+                lonLatPoint(mapBounds.top_right.lon, mapBounds.top_right.lat)
+        );
         map.zoomToExtent(bounds.espg900913);
 
         registerClickEventForMap();
