--- a/ureport/templates/ureport/upload_users.html
+++ b/ureport/templates/ureport/upload_users.html
@@ -26,7 +26,7 @@
 
 
 {% endif %}
-<form action="{% url upload_users %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
+<form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
     {{ form.as_table }}
    <tr><td> <input type="submit" value="Upload"></td></tr>
 </form>
