--- a/ureport/templates/ureport/two-column.html
+++ b/ureport/templates/ureport/two-column.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}generic/javascripts/map.js"></script>
     <script src="{{MEDIA_URL}}ureport/javascripts/ureport.js" type="text/javascript"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}ureport/javascripts/jquery-ui.js"></script>
     <script language="javascript">
     //get the map bounding box
         var map;
