--- a/ureport/templates/ureport/aids_dashboard.html
+++ b/ureport/templates/ureport/aids_dashboard.html
@@ -279,7 +279,7 @@
 
     <div class="Module">
         <h2>
-            Aids Messages
+            {{ name|capfirst }} Messages
         </h2>
 
         <span><a class="btn" href="?download=true" >Download</a></span>
@@ -323,7 +323,7 @@
                 <td>{{ msg.connection.contact.reporting_location }}</td>
                 <td><a id="msg_rep_link" href="/sendmessage/?forward=true&msg={{msg.pk}}" class="btn msg_rep"
                        data-remote=true>Foward</a> <a style="margin-top:3px; "
-                                                      href="/sendmessage/?reply=true&msg={{msg.pk}}"
+                                                      href="/sendmessage/?reply=true&msg={{msg.pk}}&flag={{ name|slugify }}"
                                                       class="btn msg_send" id="msg_send_link" data-remote=true>Reply</a>
                 </td>
                 <td>
