[Argha] giving poll details header an id to speed up splinter's discovery.

--- a/ureport/templates/ureport/polls/poll_status.html
+++ b/ureport/templates/ureport/polls/poll_status.html
@@ -5,7 +5,7 @@
 
 
 <div id="poll-status">
-    <h1>Poll {{ poll.pk }} : "{{ poll.name }}" </h1>
+    <h1 id="poll-details">Poll {{ poll.pk }} : "{{ poll.name }}" </h1>
 
     <table>
         <thead>
