--- a/ureport/templates/ureport/home.html
+++ b/ureport/templates/ureport/home.html
@@ -1,4 +1,5 @@
 {% extends "ureport_layout.html" %}
+{% load cache %}
 
 {% block javascripts %}
     <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
@@ -8,35 +9,39 @@
 {% endblock %}
 {% block top_js %}
     <script language="javascript">
-  $(document).ready(function() {
-        $('#viz').load('/bestviz/?pks=l');
-    });
+        $(document).ready(function() {
+            $('#viz').load('/bestviz/?pks=l');
+        });
     </script>
 {% endblock %}
 {% block content %}
-<div id="viz">
-</div>
-<div class="scrolltop">
-<span>PREVIOUS POLLS</span>
-</div>
-<a name="poll_results"></a>
-<div class="poll_list">
-<ul id="list_of_polls">
-    {% for p in polls %}
-    {% if p.start_date and p.viewable %}
-        <li name="poll">
-            <span class="poll-date">{{ p.start_date|date:"d/M/Y" }}</span> :
-            {{ p.question }}
-            <a href="javascript:void(0)" 
-               onclick="clear_layers();$('#viz').load('{% url ureport.views.best_visualization p.pk %}')">See results</a>
-        </li>
-    {%endif%}
-    {% endfor %}
-</ul>
-</div>
-<div class="scrollbottom">
-&nbsp;
-</div>
+    <div id="viz">
+    </div>
+    <div class="scrolltop">
+        <span>PREVIOUS POLLS</span>
+    </div>
+    <a name="poll_results"></a>
+    {% cache 1800 poll_list %}
+        {% block poll_list %}
+            <div class="poll_list">
+                <ul id="list_of_polls">
+                    {% for p in polls %}
+                        {% if p.start_date and p.viewable %}
+                            <li name="poll">
+                                <span class="poll-date">{{ p.start_date|date:"d/M/Y" }}</span> :
+                                {{ p.question }}
+                                <a href="javascript:void(0)"
+                                   onclick="clear_layers();$('#viz').load('{% url ureport.views.best_visualization p.pk %}')">See results</a>
+                            </li>
+                        {%endif%}
+                    {% endfor %}
+                </ul>
+            </div>
+        {% endblock %}
+    {% endcache %}
+    <div class="scrollbottom">
+        &nbsp;
+    </div>
 
 
 {%endblock%}
