caching poll admin userbased

--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -51,7 +51,7 @@
           <ul class="nav nav-pills">
            <li class="first"><a href="/">HOME</a></li>
 	                {% if user.is_authenticated %}
-	                   <li><a href="{% url ureport-polls %}">POLL ADMIN</a></li>
+	                   <li><a href="{% url ureport-polls user.username %}">POLL ADMIN</a></li>
 	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
 	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
@@ -89,7 +89,7 @@
 	                <!-- <li><a href="#">SITE MAP</a></li>
 	                <li><a href="#">CONTACT US</a></li> -->
 	                {% if user.is_authenticated %}
-	                   <li><a href="{% url ureport-polls %}">POLL ADMIN</a></li>
+	                   <li><a href="{% url ureport-polls  user.username %}">POLL ADMIN</a></li>
 	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
 	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
