caching alerts page userbased

--- a/ureport/templates/layout.html
+++ b/ureport/templates/layout.html
@@ -51,13 +51,13 @@
           <ul class="nav nav-pills">
            <li class="first"><a href="/">HOME</a></li>
 	                {% if user.is_authenticated %}
-	                   <li><a href="{% url ureport-polls user.username %}">POLL ADMIN</a></li>
+	                   <li><a href="{% url ureport-polls user.pk %}">POLL ADMIN</a></li>
 	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
 	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
                          <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
                         <li><a href="{% url classifier %}">A-CLASS</a></li>
-                        <li><a href="{% url alerts %}">Real Time</a></li>
+                        <li><a href="{% url alerts user.pk %}">Real Time</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
@@ -89,13 +89,13 @@
 	                <!-- <li><a href="#">SITE MAP</a></li>
 	                <li><a href="#">CONTACT US</a></li> -->
 	                {% if user.is_authenticated %}
-	                   <li><a href="{% url ureport-polls  user.username %}">POLL ADMIN</a></li>
+	                   <li><a href="{% url ureport-polls  user.pk %}">POLL ADMIN</a></li>
 	                   <li><a href="{% url messagelog %}">MESSAGE LOG</a></li>
 	                   <li><a href="{% url ureport-contact %}">UREPORTERS</a></li>
 	                   <li><a href="{% url flaggedmessages %}">FLAGGED MESSAGES</a></li>
                         <li><a href="{% url mp_dashboard %}">MP BARAZA</a></li>
                          <li><a href="{% url classifier %}">A-CLASS</a></li>
-                    <li><a href="{% url alerts %}">REAL TIME</a></li>
+                    <li><a href="{% url alerts user.pk %}">REAL TIME</a></li>
 	                {% else %}
 	                   <li><a href="/accounts/login">LOGIN</a></li>
 	                {% endif %}
